components/namespace-lister/base/metrics/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: namespace-lister-metrics-tls
  labels:
    apps: namespace-lister-metrics
  name: namespace-lister-metrics
  namespace: namespace-lister
spec:
  selector:
    apps: namespace-lister
  type: ClusterIP
  ports:
  - name: metrics
    targetPort: metrics
    port: 9100
