components/namespace-lister/base/metrics/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-user-workload-monitoring
  namespace: namespace-lister
spec:
  podSelector:
    matchLabels:
      apps: namespace-lister
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-user-workload-monitoring
    ports:
    - protocol: TCP
      port: 8080
